#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.7.0 (development) ==
 * Holding Ctrl and clicking over a reference now always opens a new editor set on the reference target.
 * Fixed NPE bug when opening D search page with a package reference selected in the editor.
 * Fixed minor parser AFE bug with qualified reference at end of file.
 * Fixed minor bug when resolving modules without module declarations (implicit module name).

== DDT 0.6.0 (2012-05-17) ==
 * Fixed bug causing DDT to never load the pre-defined editor Code Templates.
 * Added support for GDC, as well as a generic compiler install. ([http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=59 issue@ELabs #59])
 * Added support for DMD Unix style compiler installs ("usr/bin/dmd" and similar). ([http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=56 issue@ELabs #56])
 * Fixed several bugs with the D Search Page (incorrect or missing search matches). 
 * Fixed bug of incorrect default text shown in D Search Page when editor cursor/selection was on a symbol definition.
 * Labels for D elements in the outline and quick outline now show type (for variables) and return type (for functions).
 * Icons for D elements in all viewers now show protection attribute info.
   * This can be configured (overlay for all elements, or JDT-style icon overlays) in the new Appearance preference page.
 * Fixed the Open D Type dialog so that it shows the standard D icons as the rest of the IDE.
 * Fixed parser NPE bug when using inout as const wildcard declarator.
 * Fixed parser error when "alias this" appeared as a statement.
 * Fixed bugs where parser and semantic engine ignored the parameters of constructors.
 * Fixed some invalid menu entries in editor context menu (entries for commands that are not implemented).