@@ -10,7 +10,6 @@ import org.eclipse.dltk.compiler.problem.ProblemSeverities;
 import org.eclipse.dltk.core.IModelElement;
 
 import dtool.DeeNamingRules;
-import dtool.descentadapter.DeeParserSession;
 import dtool.parser.DeeParser;
 import dtool.parser.DeeParserResult;
 import dtool.parser.ICompileError;
@@ -34,21 +33,21 @@ public class DeeSourceParser extends AbstractSourceParser {
 		if(modelElement != null) {
 			defaultModuleName = DeeNamingRules.getModuleNameFromFileName(modelElement.getElementName());
 		}
-		DeeParserResult deeParserSession = true ? 
-			DeeParserSession.parseSource(defaultModuleName, source) : 
-			DeeParser.parseSource(source, defaultModuleName);
+		DeeParserResult deeParserSession = DeeParser.parseSource(source, defaultModuleName);
 		
-		for (ICompileError parserError : deeParserSession.errors) {
-			reporter.reportProblem(new DefaultProblem(
-				parserError.getUserMessage(),
-				DefaultProblemIdentifier.decode(org.eclipse.dltk.compiler.problem.IProblem.Syntax),
-				NOSTRINGS, 
-				ProblemSeverities.Error,
-				parserError.getStartPos(),
-				parserError.getEndPos(),
-				0 //TODO: review if we actually need end line
-				)
-			);
+		if(reporter != null) {
+			for (ICompileError parserError : deeParserSession.errors) {
+				reporter.reportProblem(new DefaultProblem(
+					parserError.getUserMessage(),
+					DefaultProblemIdentifier.decode(org.eclipse.dltk.compiler.problem.IProblem.Syntax),
+					NOSTRINGS, 
+					ProblemSeverities.Error,
+					parserError.getStartPos(),
+					parserError.getEndPos(),
+					0 //TODO: review if we actually need end line
+					)
+				);
+			}
 		}
 		
 		return deeParserSession;
